welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:12: error: value unary_! is not a member of Unit
	while (!finish()) {
               ^